force-app/main/default/objects/Characteristic__c/Characteristic__c.object-meta.xml
<CustomObject>
    <label>Characteristic</label>
    <nameField>
        <label>Characteristic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Characteristic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>