force-app/main/default/objects/Characteristic__c/fields/Characteristic_Key__c.field-meta.xml
<CustomField>
    <fullName>Characteristic_Key__c</fullName>
    <label>Characteristic Key</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGE</fullName>
            </value>
            <value>
                <fullName>ASH</fullName>
            </value>
            <value>
                <fullName>BAC_CER</fullName>
            </value>
            <value>
                <fullName>CERT</fullName>
            </value>
            <value>
                <fullName>CLASS</fullName>
            </value>
            <value>
                <fullName>COP_IR</fullName>
            </value>
            <value>
                <fullName>CP_SPEC</fullName>
            </value>
            <value>
                <fullName>DISC</fullName>
            </value>
            <value>
                <fullName>EASY_OPEN</fullName>
            </value>
            <value>
                <fullName>FACTCODE</fullName>
            </value>
            <value>
                <fullName>FAT</fullName>
            </value>
            <value>
                <fullName>FFA</fullName>
            </value>
            <value>
                <fullName>FIDM</fullName>
            </value>
            <value>
                <fullName>GRADE</fullName>
            </value>
            <value>
                <fullName>INSPECTION</fullName>
            </value>
            <value>
                <fullName>LABEL</fullName>
            </value>
            <value>
                <fullName>LACT_CONT</fullName>
            </value>
            <value>
                <fullName>LOAD_PACK</fullName>
            </value>
            <value>
                <fullName>MES_SPORES</fullName>
            </value>
            <value>
                <fullName>MOIST</fullName>
            </value>
            <value>
                <fullName>OIL_TYPE</fullName>
            </value>
            <value>
                <fullName>ORIGIN</fullName>
            </value>
            <value>
                <fullName>PACK</fullName>
            </value>
            <value>
                <fullName>PALLTYPE</fullName>
            </value>
            <value>
                <fullName>PH</fullName>
            </value>
            <value>
                <fullName>PLANTBRAND</fullName>
            </value>
            <value>
                <fullName>PRIVATEL</fullName>
            </value>
            <value>
                <fullName>PROT_AI</fullName>
            </value>
            <value>
                <fullName>SALMONELLA</fullName>
            </value>
            <value>
                <fullName>SHELFLIFE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>