force-app/main/default/objects/Characteristic__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Option</label>
    <type>Checkbox</type>
</CustomField>