force-app/main/default/objects/Characteristic__c/fields/Value_Remark__c.field-meta.xml
<CustomField>
    <fullName>Value_Remark__c</fullName>
    <label>Value Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>