force-app/main/default/objects/Characteristic__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Characteristic_Key__c</columns>
    <columns>NAME</columns>
    <columns>Value_Remark__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Characteristic_Key__c</field>
        <operation>equals</operation>
        <value>ORIGIN,FACTCODE,PLANTBRAND,SPEC_NO,CP_SPEC</value>
    </filters>
    <label>All</label>
</ListView>